--- a/doc/thesis.bib
+++ b/doc/thesis.bib
@@ -55,3 +55,38 @@ month = nov,
 year = {2011},
 url = {http://codeflow.org/entries/2011/nov/10/webgl-gpu-landscaping-and-erosion/}
 }
+
+@inproceedings{Igarashi:1999:TSI:311535.311602,
+ author = {Igarashi, Takeo and Matsuoka, Satoshi and Tanaka, Hidehiko},
+ title = {Teddy: a sketching interface for 3D freeform design},
+ booktitle = {Proceedings of the 26th annual conference on Computer graphics and interactive techniques},
+ series = {SIGGRAPH '99},
+ year = {1999},
+ isbn = {0-201-48560-5},
+ pages = {409--416},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1145/311535.311602},
+ doi = {10.1145/311535.311602},
+ acmid = {311602},
+ publisher = {ACM Press/Addison-Wesley Publishing Co.},
+ address = {New York, NY, USA},
+ keywords = {3D modeling, chordal axes, design, gestures, inflation, pen-based systems, sketching},
+} 
+
+@inproceedings{zeleznik2007sketch,
+  title={SKETCH: an interface for sketching 3D scenes},
+  author={Zeleznik, R.C. and Herndon, K.P. and Hughes, J.F.},
+  booktitle={ACM SIGGRAPH 2007 courses},
+  pages={19},
+  year={2007},
+  organization={ACM}
+}
+
+@inproceedings{cohen2000harold,
+  title={Harold: A world made of drawings},
+  author={Cohen, J.M. and Hughes, J.F. and Zeleznik, R.C.},
+  booktitle={Proceedings of the 1st international symposium on Non-photorealistic animation and rendering},
+  pages={83--90},
+  year={2000},
+  organization={ACM}
+}
