--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -105,25 +105,32 @@ After reading this section, you should have gained a basic understanding of the 
 \clearpage
 \chapter{State of the Art}
 \label{sec:star}
-A model is a physical or conceptual object used to represent something else in a way that isolates the information that is relevant to our intents.  On the computer, models can be made in many ways. Here we expolore the relevant developments in techniques for rapid computer modeling in general and as it applies to geologic modeling particularly.
 
-\section{Computer Modeling}
-There are many approaches to achieving rapid computer modeling. The one that is perhaps most focused on, is sketch based modeling. Sketch based modeling is an approach to three dimentional modeling where the interaction is made to feel like traditional pen and paper sketching as opposed to editing vertices and edges directly. Teddy, a soft o
+Here we will expolore the relevant developments in techniques for rapid 3D computer modeling in general and as it applies to geologic modeling especially.
 
-\section{Geologic Modeling}
-Geologists use models for understanding and communicating about phenomena relating to the structure of the earth and how it changes over time. Many tools exist for modeling such phenomena based on parameters gathered 
-- models subsurface of the earth.\\
-- show examples\\(clay, wood, sand, 2d skethces and drawings, 3d computer models)
+3D models can be made in many ways, automatically or manually, and can be represented in various ways. Most programs use a polygonal representation, meaning 3D vertices, connected by edges, forming polygons. These are easy to visualize and manipulate for the computer hardware. One traditional way to create 3D modeles on the computer, often called CAD (computer-aided design),	 usually consists of modeling and compositing different kinds of solid objects to create precise models of industrial designs, buildings etc. Other types of 3D modelling consists of editing vertices and control points of curves. These are well established ways to create detailed and sophisticated 3D models. Lots of reasearch has been done on this type of modeling over the years and much progress has been made. However, it still requires a substantial amount of training and the modeling takes a lot of time. When creating models that do not need to be perfect, such as rapid prototyping, illustration etc. this can be prohibitive. Therefore a lot of reseach has gone into developing alternative methods for user input for 3D modeling in recent years.
 
-\section{}
-- great power to be exploited\\
-- examples (spreadsheet, 3d models, simulations...)\\
-\subsection{Rapid Computer Modeling}
-- intuitive/quick (to learn or use)\\
-- replacement for paper\\
-  -- gives extra advantages over paper( rotate, change, collaborate, compute )\\
-- explain different approaches (sketch based, procedural)\\
-- show examples(teddy, z-brush, etc..)\\
+The SKETCH system was one early development in this area \cite{zeleznik2007sketch}. With SKETH, Zeleznik et al. produced a gesture-based input method for rapid modeling of simple 3D geometric shapes that could be composited using constructive solid geometry (CSG). Teddy later expanded on these ideas by creating a freeform sketching tool for 3d models \cite{Igarashi:1999:TSI:311535.311602}.
+
+%\section{Computer Modeling}
+There are many approaches to achieving rapid computer modeling. One that is much focused on these days is sketch based modeling. Sketch based modeling is an approach to 3D modeling where the interaction is made to feel like traditional pen and paper sketching as opposed to editing vertices and edges directly. Teddy, a soft o
+
+%\section{Geologic Modeling}
+Geologists use models for understanding and communicating about phenomena relating to the structure of the earth and how it changes over time. Many tools exist for modeling such phenomena. Most of the existing tools however are based on interpreting data gathered from seismic surveys or borehole data either automatically, or semiautomatically by letting the user indicate various parameters and fix the finished model manually. Examples of such programs include Petrel.
+
+Not that many purely sketch based input methods exist for the geology domain, however there exists some for sketching terrain, which are applicable to geology. Harold is an early example of a sketch based system that incorporates methods for sketching terrain, made by Cohen et al. \cite{cohen2000harold}. In Harold, the user can sketch hills on the terrain by simple strokes that start and end on the terrain. The terrain is then warped to try and match the stroke. 
+
+
+
+%- models subsurface of the earth.\\
+%- show examples\\(clay, wood, sand, 2d skethces and drawings, 3d computer models)
+
+%\subsection{Rapid Computer Modeling}
+%- intuitive/quick (to learn or use)\\
+%- replacement for paper\\
+%  -- gives extra advantages over paper( rotate, change, collaborate, compute )\\
+%- explain different approaches (sketch based, procedural)\\
+%- show examples(teddy, z-brush, etc..)\\
 
 \clearpage
 \chapter{Basic Concept}
@@ -300,7 +307,8 @@ to objects in many places. Another problem is that arrays are restricted to cont
 running speed noticeably.
 
 \subsection{Cube}
-There is no input to change the parameters of the cube. The cube itself is represented by the size of its three dimensions. That is, height, width, and depth. At the outset it was the intention to be able to change the size of the cube in these three dimensions, but there was not enough time to get to this feature. Another feature planned but not implemented, was to have multiple cubes in the same scene, enabling the inrcremental building of bigger scenes. Thus the cube also has a position, allthough this is always the origin in the current program. The geometry of the cube is constructed by creating and positioning six square faces of correct size and the correct orientation. Each of the faces are also in turn constructed by two triangles and the rectangle outlined by a line strip. When visualizing the cube geometry, only the triangle of the back faces are rendered, but all lines are shown. This effect is achieved by backface culling, makes the cube look transparent, and avoids occlusion of the geometry inside. The cube can also be made invisible like other objects, which can be useful for making screenshots where the cube is not neccessary.
+There is no input to change the parameters of the cube. The cube itself is represented by the size of its three dimensions. That is, height, width, and depth. At the outset it was the intention to be able to change the size of the cube in these three dimensions, but there was not enough time to get to this feature. Another feature planned but not implemented, was to have multiple cubes in the same scene, enabling the inrcremental building of bigger scenes. Thus the cube also has a position, allthough this is always the origin in the current program. The geometry of the cube is constructed by creating and positioning six square faces of correct size and the correct orientation. Each of the faces are also in turn constructed by two triangles and the rectangle outlined by a line strip. When visualizing the cube geometry, only the triangle of the back faces are rendered, but all lines are shown. This effect is achieved by backface culling, makes the cube look transparent, and avoids occlusion of the geometry 
+inside. The cube can also be made invisible like other objects, which can be useful for making screenshots where the cube is not neccessary.
 
 \subsection{Layers}
 Layers can be created fast and easy. In figure \ref{fig:layerCreate} we see how a layer is made by first drawing the four curves on the side of the cube, and then letting the program create the layer surface. A surface like this can be created in seconds.
@@ -338,7 +346,8 @@ New layers may be added on top of existing layers as seen in figure \ref{fig:lay
 \end{figure}
 
 \label{subsec:layers}
-At the onset of development, while the final solution was still only an idea, creating the layer wasn't really considered to be a challenge deserving all that much consideration. However, a considerable amount of time was spent on figuring out how they would be created. The very first thing done was to simply loop through all the points and draw triangle strips beginning with the first and last point, then second and second to last, and so on. This created some structure that could resemble a layer, but it was clear that it would not be usable for anything, and it was not very robust at all. The second idea was to do a simple interpolation of the points on the cube faces for each point, by going from left to right, back to front of the cube along the curves drawn on the cubes faces. Before this could be achieved, it was then clear that the four sides of the cubes needed to have separate structures and detection of which face was being drawn on. This was achived by creating a separate structure out of each side of the cube as already explained. The sides of the cube and the cube itself were then generalized into a base class that would become the basis for the tree structure that eventually became an important part of the final solution. Each face would now keep track of it's own points as they were being drawn on.
+At the onset of development, while the final solution was still only an idea, creating the layer wasn't really considered to be a challenge deserving all that much consideration. However, a considerable amount of time was spent on figuring out how they would be created. The very first thing done was to simply loop through all the points and draw triangle strips beginning with the first and last point, then second and second to last, and so on. This created some structure that could resemble a layer, but it was clear that it would not be usable for anything, and it was not very robust at all. The second idea was to do a simple interpolation of the points on the cube faces for each point, by going from left to right, back to front of the cube along the curves drawn on the cubes faces. Before this could be achieved, it was then clear that the four sides of the cubes needed to have separate structures and detection of which face was being drawn on. This was achived by creating a separate structure out of each 
+side of the cube as already explained. The sides of the cube and the cube itself were then generalized into a base class that would become the basis for the tree structure that eventually became an important part of the final solution. Each face would now keep track of it's own points as they were being drawn on.
 
 The interpolation of a layer from these points did work to create a surface structure, and it was a robust solution for creating surfaces for further use. The problem was that it did not interpolate each point as it had been drawn on the cube faces, and thus it was difficult to predict what you needed to draw in order to get the desired result (see figure \ref{fig:layerSimpleInterpol}). A solution where the user coud expect the layer surface to pass through the actual points he would draw was desired to achieve the goals of being a tool for rapid sketching that did not require advanced training and experience. Another solution was therefore sought.
 
@@ -363,7 +372,8 @@ Input for layers are drawn on the cube faces. On faces where the user draws, the
 \end{figure}
 
 
-The suggestion does different things according to the state of the other faces. If there has been no user input on the opposite side of the cube, it will automatically mirror that input to that opposite side of the cube from where he is drawing, and then extends lines between the first and last point of the curve on the current face to the first and last point of the curve on the opposite face (see figure \ref{fig:suggest}). These straight lines will then of course end up on the faces to the left and to the right of the face the user is currently is drawing. When further changes to this initial suggestion are made, what will happen depends on which sided have been draw on directly by the user already (see figure \ref{fig:layerModify}). If the opposite face has already been drawn on by the user, it will not be changed. If the left and right side has been draw on, they will be modified so that the leftmost point of the new curve aligns with the rightmost point of the left hand face, and the rightmost point of the new curve aligns with the leftmost point of the right hand face.
+The suggestion does different things according to the state of the other faces. If there has been no user input on the opposite side of the cube, it will automatically mirror that input to that opposite side of the cube from where he is drawing, and then extends lines between the first and last point of the curve on the current face to the first and last point of the curve on the opposite face (see figure \ref{fig:suggest}). These straight lines will then of course end up on the faces to the left and to the right of the face the user is currently is drawing. When further changes to this initial suggestion are made, what will happen depends on which sided have been draw on directly by the user already (see figure \ref{fig:layerModify}). If the opposite face has already been drawn on by the user, it will not be changed. If the left and right side has been draw on, they will be modified so that the leftmost point of the new curve aligns with the rightmost point of the left hand face, and the rightmost point of 
+the new curve aligns with the leftmost point of the right hand face.
  This is done by imagining a line from the first and last existing points of the curve, and then replicating the distance in height of each point on the curve from the imagined line relative to a new imagined line in the desired position (from the new point at the beginning or end of the recently modified curve to the opposite side). Otherwize there will simply be drawn a straight line fitting the same 
 constraints. The process is illustrated in figure \ref{fig:changeSide} This ensures that the lines on all the faces are at all times connected at the edges of the cube such that they are always ready to create a layer from.
 
@@ -420,11 +430,13 @@ back, left and right curves are accessed as Cf(x), Cb(x), Cl(x) and Cr(x) respec
 \end{algorithmic}
 \end{algorithm}
 
-Explained in words; for all points in the grid denoted by grid(i,j), first interpolate the left hand side corners, Cl(0) and Cl(1) of the cube according to the coordinate $i$. Then do the same for the right hand side corners Cr(0) and Cr(1), with coordinate $1-i$. Then interpolate these two points using the coordinate j, yielding a starting point $start$. Then interpolate the front and back curve points Cf(i) and Cb(1-i) using the j coordinate and calculate the difference from the starting point. Then interpolate the left and right curve points Cl(j) and Cr(1-j) using the i coordinate. Add the previously calculated difference to this point, yielding the final point. The effect of this algorithm is analougous to the magically changing wooden profile explained earlier being dragged across the left and right curves while the actual profile is the interpolated front and back curves. The effect of the algorithm is the same no matter if viewed as if dragging the front and back interpolated curves across the left and right curve or vice versa.
+Explained in words; for all points in the grid denoted by grid(i,j), first interpolate the left hand side corners, Cl(0) and Cl(1) of the cube according to the coordinate $i$. Then do the same for the right hand side corners Cr(0) and Cr(1), with coordinate $1-i$. Then interpolate these two points using the coordinate j, yielding a starting point $start$. Then interpolate the front and back curve points Cf(i) and Cb(1-i) using the j coordinate and calculate the difference from the starting point. Then interpolate the left and right curve points Cl(j) and Cr(1-j) using the i coordinate. Add the previously calculated difference to this point, yielding the final point. The effect of this algorithm is analougous to the magically changing wooden profile explained earlier being dragged across the left and right curves while the actual profile is the interpolated front and back curves. The effect of the algorithm is the same no matter if viewed as if dragging the front and back interpolated curves across the left 
+and right curve or vice versa.
 
 
 
-Another technique was also developed concurrently with that approach, inspired by Inverse Distance Weighing interpolation from Shepard \cite{shepard1968two}. The idea there was simply to loop in a similar fashion, but directly interpolate the four points Cl(i), Cr(1-i), Cf(j), and Cb(1-j) by using a function inspired by IDW. The points were weighted by the function $1/distance$ if $distance$ was more than 0. If distance was 0, that point was wighted 100 percent. This yielded presentable results, but I did not end up using it for a couple of reasons. First, I find the wooden box methaphor easier to understand, and the results easier to predict. I was unsuccessful in explaining this as a methaphor to my Geology associate, and she agreed that the wooden box was easier to understand. Second, this method needed a power parameter for how the distance is taken into account. This would have had to be exposed to the user, since I could not find a single parameter that yielded good results for every situation. Also, the points in the grid tended to get distorted according to how close to the edges a point on the grid was. This created further problems with the parametric space later on. For these reasons that approach was not included in the final solution.
+Another technique was also developed concurrently with that approach, inspired by Inverse Distance Weighing interpolation from Shepard \cite{shepard1968two}. The idea there was simply to loop in a similar fashion, but directly interpolate the four points Cl(i), Cr(1-i), Cf(j), and Cb(1-j) by using a function inspired by IDW. The points were weighted by the function $1/distance$ if $distance$ was more than 0. If distance was 0, that point was wighted 100 percent. This yielded presentable results, but I did not end up using it for a couple of reasons. First, I find the wooden box methaphor easier to understand, and the results easier to predict. I was unsuccessful in explaining this as a methaphor to my Geology associate, and she agreed that the wooden box was easier to understand. Second, this method needed a power parameter for how the distance is taken into account. This would have had to be exposed to the user, since I could not find a single parameter that yielded good results for every situation. Also, 
+the points in the grid tended to get distorted according to how close to the edges a point on the grid was. This created further problems with the parametric space later on. For these reasons that approach was not included in the final solution.
 
 
 \begin{figure}
@@ -516,7 +528,8 @@ Ridges are also drawn by a line on the layer surface. Once a line has been drawn
 \end{figure}
 
 
-Input for the ridges is first drawn on a layer as a normal curve. When the user indicates that he wants to create a ridge, a new ridge object is created based on this. A ridge is represented by this curve and a height associated with each point in the curve. The curve is the base line that the user drew on the layer where he wants the ridge to follow along. The heights are the height of the ridge at each point of the curve. Initially the height list is just a smooth function from side to side of the ridge, with a peak in the middle. The height can be changed if the user indicates so. This new height line is input on a temporary sketch wall erected for this purpose. The input procedure is similar to other lines, but in the end it is not actually stored as normal curve. When the user is done, only the height along the entire wall is stored in a list, one for each point on the base line. The wall is constructed by vertices with parametric coordinates that make it easy to read the height from each intersection, as 
+Input for the ridges is first drawn on a layer as a normal curve. When the user indicates that he wants to create a ridge, a new ridge object is created based on this. A ridge is represented by this curve and a height associated with each point in the curve. The curve is the base line that the user drew on the layer where he wants the ridge to follow along. The heights are the height of the ridge at each point of the curve. Initially the height list is just a smooth function from side to side of the ridge, with a peak in the middle. The height can be changed if the user indicates so. This new height line is input on a temporary sketch wall erected for this purpose. The input procedure is similar to other lines, but in the end it is not actually stored as normal curve. When the user is done, only the height along the entire wall is stored in a list, one for each point on the base line. The wall is constructed by vertices with parametric coordinates that make it easy to read the height from each intersection, 
+as 
 well as where along the curve each point is. If the user inputs a line that does not go strictly from left to right or right to left, but loops back over itself, only the last input for that position will be relevant as it will overwrite the former height stored there.
 
 The geometry for the ridge is only the sketch wall, which is made by simply doing a lookup of the corresponding three dimentional point of each point along the base line, then making a tringle strip between these points and points that are a certain height above.
