--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -110,7 +110,7 @@ Here we will expolore the relevant developments in techniques for rapid 3D compu
 
 3D models can be made in many ways, automatically or manually, and can be represented in various ways. Most programs use a polygonal representation, meaning 3D vertices, connected by edges, forming polygons. These are easy to visualize and manipulate for the computer hardware. One traditional way to create 3D modeles on the computer, often called CAD (computer-aided design),	 usually consists of modeling and compositing different kinds of solid objects to create precise models of industrial designs, buildings etc. Other types of 3D modelling consists of editing vertices and control points of curves. These are well established ways to create detailed and sophisticated 3D models. Lots of reasearch has been done on this type of modeling over the years and much progress has been made. However, it still requires a substantial amount of training and the modeling takes a lot of time. When creating models that do not need to be perfect, such as rapid prototyping, illustration etc. this can be prohibitive. Therefore a lot of reseach has gone into developing alternative methods for user input for 3D modeling in recent years.
 
-The SKETCH system was one early development in this area \cite{zeleznik2007sketch}. With SKETH, Zeleznik et al. produced a gesture-based input method for rapid modeling of simple 3D geometric shapes that could be composited using constructive solid geometry (CSG). Teddy later expanded on these ideas by creating a freeform sketching tool for 3d models \cite{Igarashi:1999:TSI:311535.311602}.
+The SKETCH system was one early development in this area \cite{zeleznik2007sketch}. With SKETH, Zeleznik et al. produced a gesture-based input method for rapid modeling of simple 3D geometric shapes that could be composited using constructive solid geometry (CSG). Teddy \cite{Igarashi:1999:TSI:311535.311602} later expanded on these ideas by creating a freeform sketching tool for 3d models where the user draws the silhouette of objects, and they are created automatically. Teddy made it simple for even first time users to make simple, expressive figures.
 
 %\section{Computer Modeling}
 There are many approaches to achieving rapid computer modeling. One that is much focused on these days is sketch based modeling. Sketch based modeling is an approach to 3D modeling where the interaction is made to feel like traditional pen and paper sketching as opposed to editing vertices and edges directly. Teddy, a soft o
